# urlup

./: .gitignore  .gitmodules  CHANGES.md  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  SUPPORT.md  codemeta.json  make.bat  pyinstaller-darwin.spec  pyinstaller-win32.spec  requirements.txt  setup.cfg  setup.py
.graphics/: urlup.cast
dev/icons/generated-icons/: urlup-icon.icns
dev/installers/windows/: README.md  substitute_version.py  urlup_innosetup_script.iss.in
tests/: example.py  urlup_debug.py
urlup/: __init__.py  __main__.py  __version__.py  cli_main.py  credentials.py  errors.py  http_code.py  messages.py  proxy_helper.py  urlup.py
