[metadata]
name             = urlup
version          = 1.5.1
description      = Dereference URLs and determine their final destinations
author           = Michael Hucka
author_email     = mhucka@caltech.edu
license          = BSD 3-clause
license_files    = LICENSE
url              = https://github.com/caltechlibrary/urlup
long_description = file:README.md
long_description_content_type = text/markdown

[check-manifest]
ignore =
    .graphics/urlup.cast
